Fix whitespace error

--- a/src/public/static/style.css
+++ b/src/public/static/style.css
@@ -32,5 +32,5 @@ body > .container {
 /* }}} */
 
 #termini_form {
-  visibility: hidden;
+  display: none;
 }
